# bejeweled_v1

./: README.md
Client/: CMakeLists.txt  main.cpp
Others/: CLIENT.md  SERVICEDEVELOP.md
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/config/: GameConfig.h
Server/src/controllers/: AuthController.h  GameController.h
Server/src/dao/: UserDao.cpp  UserDao.h
Server/src/models/: GameSession.h  User.h
Server/src/services/: GameService.cpp  GameService.h
Server/src/static/: index.html
Server/src/utils/: Response.h  WebPage.h
